--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html, body, header {
+	height: 100%;
+}
+
 body{
 	margin: 0px;
 }
@@ -7,14 +11,33 @@ nav {
 	text-align: center;
 }
 
-.jumbotron {
-	background-color: #bcbcbc;
+.welcome_section {
+	position: absolute;  
+  	min-height: 100%;
+  	min-width: 100%;
+  	background-image: url('./images/horizon_cover.jpg');
+
+  	background-repeat: no-repeat;
+	background-position: center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.inner_container {
 	text-align: center;
+    position: absolute;
+    top: 48%;
+    width: 100%;
+    color: white;
 }
 
 .about_me_section {
 	background-color: #9e9c9c ;
 	text-align: center;
+	position: relative;
+	top: 0;
 }
 
 .projects_section {
