--- a/index.css
+++ b/index.css
@@ -7,8 +7,25 @@ body{
 }
 
 nav {
-	background-color: #bcbcbc;
-	text-align: center;
+	color: white;
+
+}
+
+
+nav ul {
+	display: flex;
+    justify-content: space-evenly;
+    padding-left: 38%;
+    font-size: 1.3em;
+}
+nav ul li{
+	list-style: none;
+	display: inline;
+	float: right;
+}
+
+li a, li a:hover {
+	color: white;
 }
 
 .welcome_section {
@@ -28,9 +45,17 @@ nav {
 .inner_container {
 	text-align: center;
     position: absolute;
-    top: 48%;
+    top: 45%;
     width: 100%;
     color: white;
+}
+
+.main_title {
+	font-size: 4.0em
+}
+
+.subtitle {
+	font-size: 2.5em	
 }
 
 .about_me_section {
