modified contact me basic layout

--- a/index.css
+++ b/index.css
@@ -114,7 +114,12 @@ hr.style2 {
 	background-color: 
 }
 
+.contact_links_container {
+	padding-bottom:20px ;
+}
+
 footer{
 	text-align: center;
-	background-color: #bcbcbc;
+	background-color: black;
+	color: #ddd;
 }
