--- a/index.css
+++ b/index.css
@@ -99,6 +99,11 @@ hr.style2 {
 	background-color: 
 }
 
+.project_screenshot {
+	border: 2px solid black;
+	margin-bottom: 10px;
+}
+
 .project_1_info {
 	background-color: 
 }
