--- a/index.css
+++ b/index.css
@@ -6,24 +6,6 @@ body{
 	margin: 0px;
 }
 
-nav {
-	color: white;
-
-}
-
-
-nav ul {
-	display: flex;
-    justify-content: space-evenly;
-    padding-left: 38%;
-    font-size: 1.3em;
-}
-nav ul li{
-	list-style: none;
-	display: inline;
-	float: right;
-}
-
 li a, li a:hover {
 	color: white;
 }
@@ -36,6 +18,10 @@ main {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+}
+
+.section_divider hr{
+	margin-top: 0px;
 }
 
 .welcome_section {
@@ -55,9 +41,16 @@ main {
 .inner_container {
 	text-align: center;
     position: absolute;
-    top: 45%;
+    top: 17%;
     width: 100%;
-    color: white;
+    color: black;
+}
+
+.nav_buttons {
+	display: flex;
+    justify-content: space-evenly;
+    font-size: 1.3em;
+    margin-top: 20%;
 }
 
 
