--- a/index.css
+++ b/index.css
@@ -22,10 +22,12 @@ main {
 
 h4 {
 	font-weight: bold;
+	text-decoration: underline;
 }
 
 p {
 	font-size: 1.3em;
+	padding: 0% 5%;
 }
 
 /*.section_divider hr{
@@ -91,11 +93,9 @@ hr.style2 {
 	text-decoration: underline;
 }
 
-.about_me_section {
+
+.about_me_info {
 	text-align: center;
-	position: relative;
-	top: 0;
-	padding: 0% 5%;
 }
 
 .projects_section {
@@ -109,6 +109,7 @@ hr.style2 {
 .project_title {
 	font-size: 2.1em;
 	font-weight: bold;
+	text-decoration: underline;
 }
 
 .project_screenshot {
