--- a/index.css
+++ b/index.css
@@ -180,7 +180,7 @@ footer{
 	}
 
 
-	.bitmoji_container {
+	.image_container {
 		float: left;
 		width: 50%;
 		height: 540px;
@@ -194,25 +194,50 @@ footer{
 		max-width: none;
 	}
 
-	.about_me_title, .about_me_description {
+	.about_me_title, .project_title, .about_me_description, .project_description {
 		float: right;
 		width: 50%;
 		clear: right;
 	}
 
-	hr{
+	hr, .tech_title{
 		clear: both;
+	}
+
+	.project_screenshot {
+		width: 100%;
+	}
+
+	.technologies_list {
+		clear:both;
+		width: 50%;
+		float: left;
+		padding-left: 5%;
+	}
+
+	.view_app_title {
+		display: inline;
+	}
+
+	.app_links {
+		width: 50%;
+    	float: right;
+    	padding: 0% 5%;
+    	display: flex;
+    	justify-content: space-evenly;
+    	align-items: center;
 	}
 }
 
+
 @media(min-width: 1120px) {
-	.bitmoji_container {
+	.image_container {
 		height: 480px;
 	}	
 }
 
 @media(min-width: 1350px) {
-	.bitmoji_container {
+	.image_container, .technologies_list {
 		width: 40%;
 		margin-left: 110px;
 	}	
