--- a/index.css
+++ b/index.css
@@ -41,9 +41,7 @@ p {
 	position: absolute;  
   	min-height: 100%;
   	min-width: 100%;
-  	background-image: url('./images/horizon_cover.jpg');
-
-  	background-repeat: no-repeat;
+  	background-image: url('./images/horizon_cover.jpg');  	background-repeat: no-repeat;
 	background-position: center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -150,10 +148,26 @@ hr.style2 {
 	font-family: 'Teko', sans-serif;
 }
 
-
 .contact_me_section {
+	text-align
+	height: 200px;
+	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('./images/simple_cover.jpg');
+	background-position: center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.section_title.black_background {
+	background-color: black;
+    color: white;
+    font-family: 'Teko', sans-serif;
+    font-size: 3.5em;
+}
+
+.contact_container {
 	text-align: center;
-	background-color: 
 }
 
 .contact_card {
@@ -164,6 +178,11 @@ hr.style2 {
 
 .contact_links_container {
 	padding-bottom:20px ;
+}
+
+.blue_anchor_font {
+	color: #D15354;
+	font-weight: bold;
 }
 
 .contact_icon {
@@ -177,6 +196,12 @@ footer{
 	background-color: black;
 	color: #ddd;
 	font-family: 'Teko', sans-serif;
+}
+
+@media(min-width: 700px) {
+	.contact_info {
+		width: 56%;
+	}
 }
 
 @media(min-width: 850px) {
