--- a/index.css
+++ b/index.css
@@ -128,6 +128,10 @@ hr.style2 {
 	font-size: 1.2em;
 }
 
+.anchor_color {
+	color: #007bff ;
+}
+
 .project_title {
 	font-size: 3.0em;
 	font-weight: bold;
