--- a/index.css
+++ b/index.css
@@ -104,6 +104,8 @@ hr.style2 {
 	padding-bottom: 10px;
 	width: 50%;
 	max-width: 370px;
+	margin-left: auto;
+    margin-right: auto;
 }
 
 .projects_section {
@@ -244,7 +246,13 @@ footer a {
 	.bitmoji_hi {
 		border-bottom: none;
 		width: 100%;
-		max-width: none;
+		max-width: 480px;
+	}
+
+
+	.about_me_description,.about_me_title{
+		    padding-left: 2%;
+    padding-right: 13%;
 	}
 
 	.about_me_title, .project_title, .about_me_description, .project_description {
@@ -313,6 +321,11 @@ footer a {
 		width: 46%;
     	margin-left: 50px;
 	}	
+
+	.avatar_container{
+    	display: flex;
+    	align-items: flex-start;
+	}
 
 	.image_container.right {
 		width: 46%;
